Remove stylesheet of link element when rel != stylesheet

Stylesheets from link elements that previously have rel = "stylesheet"
but then changed to something else should be removed/not considered
anymore until the rel attribute is changed back to "stylesheet" again.

Currently this works correctly for link elements in the document tree,
but fails in link elements within a shadow tree because link elements
in shadow tree with rel attribute != "stylesheet"  are skipped from
processing. Because of that, the stylesheet in the link element was
never cleared and no style recalc happened.
JSBin from bug: http://jsbin.com/bojunajaju/edit?html,console,output


Bug: 817355
Change-Id: I57c71c79c0cc471d36eb988b8a81eef82c33548a
Reviewed-on: https://chromium-review.googlesource.com/995116
Commit-Queue: Rakina Zata Amni <rakina@chromium.org>
Reviewed-by: Hayato Ito <hayato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548357}
Former-commit-id: 6b65abd7fa82b44258dd602846c49043c3b805a2